--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "compression-webpack-plugin": "^3.0.0",
     "core-js": "^3.3.2",
+    "cube-ui": "^1.12.32",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1",
