--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "axios": "^0.19.0",
     "compression-webpack-plugin": "^3.0.0",
     "core-js": "^3.3.2",
-    "cube-ui": "^1.12.32",
+    "lib-flexible": "^0.3.2",
+    "postcss-pxtorem": "^4.0.1",
+    "stylus-loader": "^3.0.2",
+    "vant": "^2.2.14",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1",
@@ -49,7 +52,18 @@
   },
   "postcss": {
     "plugins": {
-      "autoprefixer": {}
+      "autoprefixer": {
+        "browsers": [
+          "Android >= 4.0",
+          "iOS >= 7"
+        ]
+      },
+      "postcss-pxtorem": {
+        "rootValue": 37.5,
+        "propList": [
+          "*"
+        ]
+      }
     }
   },
   "browserslist": [
