--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
 NODE_ENV='development'
 VUE_APP_CURRENTMODE='dev'
-VUE_APP_BASEURL='http://127.0.0.1:3000/api/'
+VUE_APP_BASEURL='http://123.57.174.24:3000'
