--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
 NODE_ENV='production'
 VUE_APP_CURRENTMODE='prod'
-VUE_APP_BASEURL='http://127.0.0.1:3000/api/'
+VUE_APP_BASEURL='http://123.57.174.24:3000'
