--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
       "plugin:vue/essential",
       "@vue/prettier"
     ],
-    "rules": {},
+    "rules": {
+      "no-unused-vars":0
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
